--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="canvas-wrapper">
+          <canvas width="700" height="400" id="canvas"></canvas>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
